[project]
name = "lab4_final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "iniconfig>=2.3.0",
    "logging>=0.4.9.6",
    "packaging>=26.0",
    "pluggy>=1.6.0",
    "pygments>=2.19.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "typing>=3.10.0.0",
]
